[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/TitleScreen/StoryText.png" type="Texture" id=2]
[ext_resource path="res://Sprites/TitleScreen/CasterGroundsText.png" type="Texture" id=3]
[ext_resource path="res://Sprites/TitleScreen/PlayText.png" type="Texture" id=4]
[ext_resource path="res://Sprites/TitleScreen/PlayTextSelected.png" type="Texture" id=5]
[ext_resource path="res://Sprites/TitleScreen/PracticeText.png" type="Texture" id=6]
[ext_resource path="res://Sprites/TitleScreen/StoryTextSelected.png" type="Texture" id=7]
[ext_resource path="res://Sprites/TitleScreen/PracticeTextSelected.png" type="Texture" id=8]
[ext_resource path="res://Sounds/Magical Adventure 8 Bit Game Music - Mana Trail By HeatleyBros.wav" type="AudioStream" id=9]
[ext_resource path="res://Sprites/TitleScreen/TitleScreenBackground.png" type="Texture" id=10]
[ext_resource path="res://NiceFont.tres" type="DynamicFont" id=11]
[ext_resource path="res://Sprites/TitleScreen/CreditsSelected.png" type="Texture" id=14]
[ext_resource path="res://Sprites/TitleScreen/Credits.png" type="Texture" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/CasterGroundsText:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 3 ) ]
}

[node name="TitleScreen" type="Node2D"]
position = Vector2( -0.8909, 0 )
script = ExtResource( 1 )

[node name="TitleScreenBackground" type="Sprite" parent="."]
position = Vector2( 381.831, 181.315 )
texture = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )

[node name="CasterGroundsText" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 370.959, 61.6215 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
autoplay = true

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 178.418
margin_top = 148.673
margin_right = 378.418
margin_bottom = 212.673
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PracticeButton" type="TextureButton" parent="Menu"]
margin_right = 200.0
margin_bottom = 29.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryButton" type="TextureButton" parent="Menu"]
margin_top = 33.0
margin_right = 200.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 2, 0 )
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TextureButton" parent="Menu"]
margin_top = 68.0
margin_right = 200.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 2, 0 )
texture_normal = ExtResource( 15 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="Menu"]
visible = false
margin_top = 68.0
margin_right = 200.0
margin_bottom = 97.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 694.423
margin_top = 342.755
margin_right = 753.423
margin_bottom = 356.755
custom_fonts/font = ExtResource( 11 )
text = "yourguyphil"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/PracticeButton" to="." method="_on_PracticeButton_pressed"]
[connection signal="pressed" from="Menu/StoryButton" to="." method="_on_StoryButton_pressed"]
[connection signal="pressed" from="Menu/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Menu/PlayButton" to="." method="_on_PlayButton_pressed"]
